// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers getGainersAndLosersByIndex: API Response Validation 1`] = `
Array [
  Object {
    "gainers": Array [
      "priority: number",
      "symbol: string",
      "identifier: string",
      "series: string",
      "open: number",
      "dayHigh: number",
      "dayLow: number",
      "lastPrice: number",
      "previousClose: number",
      "change: number",
      "pChange: number",
      "totalTradedVolume: number",
      "totalTradedValue: number",
      "lastUpdateTime: string",
      "yearHigh: number",
      "ffmc: number",
      "yearLow: number",
      "nearWKH: number",
      "nearWKL: number",
      "perChange365d: number",
      "date365dAgo: string",
      "chart365dPath: string",
      "date30dAgo: string",
      "perChange30d: number",
      "chart30dPath: string",
      "chartTodayPath: string",
      Object {
        "meta": Array [
          "symbol: string",
          "companyName: string",
          Object {
            "activeSeries": "string",
          },
          Object {
            "debtSeries": Array [],
          },
          Object {
            "tempSuspendedSeries": Array [],
          },
          "isFNOSec: boolean",
          "isCASec: boolean",
          "isSLBSec: boolean",
          "isDebtSec: boolean",
          "isSuspended: boolean",
          "isETFSec: boolean",
          "isDelisted: boolean",
          "isin: string",
        ],
      },
    ],
  },
  Object {
    "losers": Array [
      "priority: number",
      "symbol: string",
      "identifier: string",
      "series: string",
      "open: number",
      "dayHigh: number",
      "dayLow: number",
      "lastPrice: number",
      "previousClose: number",
      "change: number",
      "pChange: number",
      "totalTradedVolume: number",
      "totalTradedValue: number",
      "lastUpdateTime: string",
      "yearHigh: number",
      "ffmc: number",
      "yearLow: number",
      "nearWKH: number",
      "nearWKL: number",
      "perChange365d: number",
      "date365dAgo: string",
      "chart365dPath: string",
      "date30dAgo: string",
      "perChange30d: number",
      "chart30dPath: string",
      "chartTodayPath: string",
      Object {
        "meta": Array [
          "symbol: string",
          "companyName: string",
          "industry: string",
          Object {
            "activeSeries": "string",
          },
          Object {
            "debtSeries": Array [],
          },
          Object {
            "tempSuspendedSeries": "string",
          },
          "isFNOSec: boolean",
          "isCASec: boolean",
          "isSLBSec: boolean",
          "isDebtSec: boolean",
          "isSuspended: boolean",
          "isETFSec: boolean",
          "isDelisted: boolean",
          "isin: string",
        ],
      },
    ],
  },
]
`;

exports[`Helpers getMostActiveEquities: API Response Validation 1`] = `
Array [
  Object {
    "byVolume": Array [
      "priority: number",
      "symbol: string",
      "identifier: string",
      "open: number",
      "dayHigh: number",
      "dayLow: number",
      "lastPrice: number",
      "previousClose: number",
      "change: number",
      "pChange: number",
      "ffmc: number",
      "yearHigh: number",
      "yearLow: number",
      "totalTradedVolume: number",
      "totalTradedValue: number",
      "lastUpdateTime: string",
      "nearWKH: number",
      "nearWKL: number",
      "perChange365d: number",
      "date365dAgo: string",
      "chart365dPath: string",
      "date30dAgo: string",
      "perChange30d: number",
      "chart30dPath: string",
      "chartTodayPath: string",
    ],
  },
  Object {
    "byValue": Array [
      "priority: number",
      "symbol: string",
      "identifier: string",
      "open: number",
      "dayHigh: number",
      "dayLow: number",
      "lastPrice: number",
      "previousClose: number",
      "change: number",
      "pChange: number",
      "ffmc: number",
      "yearHigh: number",
      "yearLow: number",
      "totalTradedVolume: number",
      "totalTradedValue: number",
      "lastUpdateTime: string",
      "nearWKH: number",
      "nearWKL: number",
      "perChange365d: number",
      "date365dAgo: string",
      "chart365dPath: string",
      "date30dAgo: string",
      "perChange30d: number",
      "chart30dPath: string",
      "chartTodayPath: string",
    ],
  },
]
`;
